--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ globalterrorism_excel.xlsx
 globalterrorismdb_0718dist_c.csv
 gt_clean.csv
 globalterrorism10000.csv
+globalterrorism_band_tableau.csv
